--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="banner">
-        <h2>welcome to my website</h2>
+        <h2>hello, welcome to my website</h2>
     </div>
     
 </body>
