--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,43 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="banner">
         <h2>hello, welcome to my website</h2>
     </div>
-    
+
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut explicabo itaque animi
+                            laudantium assumenda rem, maiores obcaecati excepturi. Doloremque inventore dolore aliquam
+                            at voluptate dolores iure sit quidem ducimus quis!</p>
+                    </div>
+                </div>
+
+                <div class="col-3">
+                    <div class="card">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut explicabo itaque animi
+                            laudantium assumenda rem, maiores obcaecati excepturi. Doloremque inventore dolore aliquam
+                            at voluptate dolores iure sit quidem ducimus quis!</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut explicabo itaque animi
+                            laudantium assumenda rem, maiores obcaecati excepturi. Doloremque inventore dolore aliquam
+                            at voluptate dolores iure sit quidem ducimus quis!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
